Added images and legal for EUL App

--- a/apps/eul.html
+++ b/apps/eul.html
@@ -32,10 +32,17 @@ I started my journey coding in C and moved on to Python where I strive now build
                     <h1 class="mb-0">EUL Student</h1>
                 </div>
             </div>
-            <div class="row d-flex flex-column-reverse flex-sm-row mt-3">
+            <div class="row d-flex flex-column-reverse flex-sm-row mt-5">
                 <div class="col-12 col-sm-7 col-md-7 col-lg-8 col-xl-8 col-xxl-9">
                     <h4 class="text-muted">What's New</h4>
-                    <p>New UI built from user feedback.<br>Now weekly schedule shows an image of the building the class room is in.<br>Curriculum is easier to use and read information.<br>New financial feature shows the students balance and balance history with transactions made to the University and sends notifications when there is activity.<br>Now users can manually download the bus schedule.</p>
+                    <p>New UI.<br>Added more buildings for classroom.<br>Fixed some critical bugs.</p>
+                    <div class="row">
+                        <div class="col-6 col-sm-6 col-md-3 col-lg-3 col-xl-2 col-xxl-2 mb-2"><img class="rounded img-fluid" src="../assets/img/eul/Google%20Pixel%204%20XL%20Screenshot%200.png" width="100%"></div>
+                        <div class="col-6 col-sm-6 col-md-3 col-lg-3 col-xl-2 col-xxl-2 mb-2"><img class="rounded img-fluid" src="../assets/img/eul/Google%20Pixel%204%20XL%20Screenshot%201.png" width="100%"></div>
+                        <div class="col-6 col-sm-6 col-md-3 col-lg-3 col-xl-2 col-xxl-2 mb-2"><img class="rounded img-fluid" src="../assets/img/eul/Google%20Pixel%204%20XL%20Screenshot%202.png" width="100%"></div>
+                        <div class="col-6 col-sm-6 col-md-3 col-lg-3 col-xl-2 col-xxl-2 mb-2"><img class="rounded img-fluid" src="../assets/img/eul/Google%20Pixel%204%20XL%20Screenshot%203.png" width="100%"></div>
+                        <div class="col-6 col-sm-6 col-md-3 col-lg-3 col-xl-2 col-xxl-2 mb-2"><img class="rounded img-fluid" src="../assets/img/eul/Google%20Pixel%204%20XL%20Screenshot%204.png" width="100%"></div>
+                    </div>
                     <h4 class="text-muted">Description</h4>
                     <p>Welcome to "EUL Student," your personalized companion for a streamlined and organized academic journey at the European University of Lefke. This app is designed to provide students with a modern and user-friendly interface, offering a range of features to enhance their university experience.<br><br>Features:<br><br>1. Weekly Schedule:<br>Easily access and visualize your weekly class schedule in a sleek and intuitive interface. Stay on top of your classes and never miss an important lecture or tutorial.<br><br>2. Notifications:<br>Receive timely notifications for upcoming classes, assignments, and important events. Stay informed and in control of your academic commitments with personalized reminders.<br><br>3. Curriculum Overview:<br>Navigate through your academic journey with a comprehensive curriculum overview. Track your progress, view current courses, and explore upcoming ones. The app provides a clear snapshot of your academic path, helping you stay focused on your goals.<br><br>4. Academic Progress:<br>Keep track of your academic achievements and monitor your progress towards completing your degree. Get a score indicating how close you are to achieving your academic goals, providing motivation and a sense of accomplishment.<br><br>5. Bus Schedule:<br>For those relying on university transportation, the app includes a convenient bus schedule. Access information on bus times, routes, and stops, ensuring you reach your destination on time.<br><br>Why EUL Student?<br>Efficiency: Streamline your academic life with a single, user-friendly app.<br>Organization: Stay organized with a clear view of your schedule and academic progress.<br>Notifications: Receive timely reminders to stay on top of your commitments.<br>User-Friendly Design: Enjoy a modern and visually appealing interface designed for an optimal user experience.<br><br>EUL Student is more than just a schedule app; it's your companion for success at the European University of Lefke. Download now and embark on a journey towards a well-organized, efficient, and fulfilling academic experience. Your education, your way.</p>
                 </div>
@@ -45,6 +52,124 @@ I started my journey coding in C and moved on to Python where I strive now build
                         </svg>&nbsp;Go to Play Store</a><a class="btn btn-outline-dark link-light mb-4" role="button" href="https://expo.dev/artifacts/eas/3N1eWYRCApcLSESqab12r6.apk">Download .apk</a>
                     <p class="text-muted small">*The APK is provided for users that have older androids and is not guaranteed to work as intended and may crash. Use at your own risk.</p>
                 </div>
+            </div>
+            <hr class="my-5">
+            <div class="row">
+                <div class="col"><div>
+  <h1 id="termsofuse">EUL Student - Terms of Use</h1>
+  <p><strong>Last Updated:</strong> <em>08/15/2024</em></p>
+  <hr>
+
+  <h3>Introduction</h3>
+  <p>Welcome to the EUL Student app ("<strong>the App</strong>"), developed by Sana Mngadi ("<strong>the Developer</strong>"). By downloading, accessing, or using the App, you agree to comply with and be bound by these Terms of Use. If you do not agree to these terms, please do not use the App.</p>
+  <hr>
+
+  <h3>Contact Information</h3>
+  <p>For any questions, concerns, or inquiries, contact the Developer at <em>snm.developer@gmail.com</em>.</p>
+  <hr>
+
+  <h3>Purpose of the App</h3>
+  <p>The EUL Student app is an <strong>unofficial</strong> student companion app designed to enhance the student experience at the European University of Lefke. The App offers various features, including:</p>
+  <ul>
+    <li><strong>Access to University Systems:</strong> Integrates with university systems such as OIBS, Opay, and the Financial Portal to provide up-to-date information on academic and financial status.</li>
+    <li><strong>Notifications and Scheduling:</strong> Receive notifications for events, weekly class schedules, and other important updates.</li>
+    <li><strong>Financial Overview:</strong> Displays student account balances. Due to limitations in the university’s Financial Portal, displayed balances may occasionally be inaccurate. Supports Euros and Dollars; Turkish Lira may be added in the future.</li>
+    <li><strong>Experimental Features:</strong> May include features under development, which might not be fully functional or accurate.</li>
+  </ul>
+  <hr>
+
+  <h3>Data Collection and Usage</h3>
+  <h4>User Credentials</h4>
+  <p>To provide its services, the App requires users to input their university system credentials (e.g., OIBS and portal usernames and passwords). These credentials are necessary to access university systems and retrieve relevant data. By using the App, you consent to the collection and use of your credentials for these purposes.</p>
+
+  <h4>Data Storage</h4>
+  <ul>
+    <li>User credentials are securely stored within the App and, in some cases, on an online database.</li>
+    <li>The Developer employs industry-standard practices to protect your data's security and confidentiality.</li>
+    <li>The App does not share, sell, or distribute user data to third parties without explicit consent.</li>
+  </ul>
+  <hr>
+
+  <h3>Financial Information Disclaimer</h3>
+  <ul>
+    <li>The financial information provided within the App, including student balances, is retrieved from the university’s Financial Portal, which may have limitations or errors in calculation. As a result, the displayed balance may sometimes be inaccurate.</li>
+    <li>The Developer is not responsible for any discrepancies or financial decisions based on the information provided by the App.</li>
+  </ul>
+  <hr>
+
+  <h3>Future Features and Changes</h3>
+  <p>The Developer reserves the right to introduce new features, including advertisements and a subscription plan to remove ads. The subscription plan will be managed through Stripe, with payments processed via credit card. Users will be notified of any significant updates or changes to the App’s functionality or these Terms of Use.</p>
+  <hr>
+
+  <h3>Disclaimer of Warranties</h3>
+  <p>The App is provided on an "<strong>as-is</strong>" and "<strong>as-available</strong>" basis. The Developer makes no warranties, express or implied, regarding the App’s performance, accuracy, reliability, or suitability for any particular purpose. Users use the App at their own risk.</p>
+  <hr>
+
+  <h3>Limitation of Liability</h3>
+  <p>The Developer shall not be liable for any direct, indirect, incidental, consequential, or special damages arising from or in any way related to the use of the App, including but not limited to data loss, system errors, or financial inaccuracies.</p>
+  <hr>
+
+  <h3>Acceptance of Terms</h3>
+  <p>By using the EUL Student app, you acknowledge that you have read, understood, and agreed to these Terms of Use. These terms may be updated periodically, and continued use of the App signifies acceptance of any changes.</p>
+  <hr>
+
+  <h1 id="privacypolicy">EUL Student App - Privacy Policy</h1>
+  <p><strong>Last Updated:</strong> <em>08/15/2024</em></p>
+  <hr>
+
+  <h3>Introduction</h3>
+  <p>Welcome to the EUL Student app ("<strong>the App</strong>"), developed by Sana Mngadi ("<strong>the Developer</strong>"). This Privacy Policy explains how your personal information is collected, used, and protected when you use the App. By using the App, you consent to the practices described in this policy.</p>
+  <hr>
+
+  <h3>Contact Information</h3>
+  <p>For any questions, concerns, or inquiries regarding privacy and data protection, you can contact the Developer at <em>snm.developer@gmail.com</em>.</p>
+  <hr>
+
+  <h3>Data Collection and Usage</h3>
+  <h4>Types of Data Collected</h4>
+  <ul>
+    <li><strong>Credentials:</strong> The App requires users to input their OIBS and portal usernames and passwords to access and retrieve data from the university’s systems. These credentials are stored securely and used solely for the intended purposes.</li>
+    <li><strong>User Data:</strong> The App may collect additional information, such as user preferences and interaction history, to improve the user experience.</li>
+  </ul>
+
+  <h4>Purpose of Data Collection</h4>
+  <p>The primary purpose of data collection is to provide users with a seamless experience by integrating the App with the university's systems, enabling features such as academic data management, financial overview, and notifications.</p>
+
+  <h4>Data Storage and Security</h4>
+  <ul>
+    <li>User credentials and other collected data are securely stored within the App and, where necessary, on an online database.</li>
+    <li>The Developer has implemented industry-standard security measures to protect user data from unauthorized access, alteration, disclosure, or destruction.</li>
+  </ul>
+  <hr>
+
+  <h3>Third-Party Services</h3>
+  <p>In the future, the App may integrate with third-party services, such as Google Ads for advertisements and Stripe for payment processing. If these services are enabled, users will be informed, and additional consent may be required.</p>
+  <hr>
+
+  <h3>Experimental Features</h3>
+  <p>The App may include experimental features that are still under development. These features are provided on a trial basis and may not be fully functional. Users are advised to exercise caution when using these tools.</p>
+  <hr>
+
+  <h3>Data Sharing and Disclosure</h3>
+  <ul>
+    <li>The Developer does not share, sell, or distribute user data to third parties without explicit consent, except as required by law or in the event of a legal investigation.</li>
+  </ul>
+  <hr>
+
+  <h3>User Rights</h3>
+  <p>Users have the right to request access to their data, correct inaccuracies, or delete their data by contacting the Developer. Users may also withdraw consent to data collection at any time by discontinuing the use of the App.</p>
+  <hr>
+
+  <h3>Disclaimer</h3>
+  <p>The App is provided on an "<strong>as-is</strong>" basis, and the Developer makes no warranties regarding its functionality, accuracy, or reliability. The Developer is not responsible for any data breaches or unauthorized access resulting from the use of the App.</p>
+  <hr>
+
+  <h3>Acceptance of Privacy Policy</h3>
+  <p>By using the EUL Student app, you acknowledge that you have read, understood, and agreed to this Privacy Policy. This policy may be updated periodically, and continued use of the App signifies acceptance of any changes.</p>
+
+  <p>Thank you for using the EUL Student app!</p>
+</div>
+</div>
             </div>
         </div>
     </section>
