--- a/apps/eul.html
+++ b/apps/eul.html
@@ -49,7 +49,9 @@ I started my journey coding in C and moved on to Python where I strive now build
                 <div class="col d-flex flex-column"><a class="btn btn-outline-dark link-light d-flex flex-row justify-content-center align-items-center mb-3 gap-3" role="button" href="https://play.google.com/store/apps/details?id=com.sana.eulstudent" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" width="1em" height="1em" fill="currentColor">
                             <!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) Copyright 2023 Fonticons, Inc. -->
                             <path d="M325.3 234.3L104.6 13l280.8 161.2-60.1 60.1zM47 0C34 6.8 25.3 19.2 25.3 35.3v441.3c0 16.1 8.7 28.5 21.7 35.3l256.6-256L47 0zm425.2 225.6l-58.9-34.1-65.7 64.5 65.7 64.5 60.1-34.1c18-14.3 18-46.5-1.2-60.8zM104.6 499l280.8-161.2-60.1-60.1L104.6 499z"></path>
-                        </svg>&nbsp;Go to Play Store</a></div>
+                        </svg>&nbsp;Go to Play Store</a><a class="btn btn-outline-dark link-light mb-4" role="button" href="https://files.catbox.moe/ok0umz.apk">Download .apk</a>
+                    <p class="text-muted small">*The APK is provided for users that have older androids and is not guaranteed to work as intended and may crash. Use at your own risk.</p>
+                </div>
             </div>
             <hr class="my-5">
             <div class="row">
