Added Golang skillset

--- a/index.html
+++ b/index.html
@@ -132,6 +132,11 @@ I started my journey coding in C and moved on to Python where I strive now build
                                         <p class="text-center devicon-react-original skill-icons"></p>
                                     </div>
                                 </div>
+                                <div class="card" data-bss-disabled-mobile="true" data-aos="zoom-in-up" data-aos-duration="800" data-aos-delay="400" data-aos-once="true">
+                                    <div class="card-body">
+                                        <p class="text-center devicon-go-original-wordmark skill-icons"></p>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
