--- a/apps/eul.html
+++ b/apps/eul.html
@@ -35,7 +35,7 @@ I started my journey coding in C and moved on to Python where I strive now build
             <div class="row d-flex flex-column-reverse flex-sm-row mt-5">
                 <div class="col-12 col-sm-7 col-md-7 col-lg-8 col-xl-8 col-xxl-9">
                     <h4 class="text-muted">What's New</h4>
-                    <p>New UI.<br>Added more buildings for classroom.<br>Fixed some critical bugs.</p>
+                    <p>Multi-language support (EN, TR, RU &amp; PT)<br>New method of collecting accounting data.<br>Critical bug fixes and more.</p>
                     <div class="row">
                         <div class="col-6 col-sm-6 col-md-3 col-lg-3 col-xl-2 col-xxl-2 mb-2"><img class="rounded img-fluid" src="../assets/img/eul/Google%20Pixel%204%20XL%20Screenshot%200.png" width="100%"></div>
                         <div class="col-6 col-sm-6 col-md-3 col-lg-3 col-xl-2 col-xxl-2 mb-2"><img class="rounded img-fluid" src="../assets/img/eul/Google%20Pixel%204%20XL%20Screenshot%201.png" width="100%"></div>
@@ -49,7 +49,7 @@ I started my journey coding in C and moved on to Python where I strive now build
                 <div class="col d-flex flex-column"><a class="btn btn-outline-dark link-light d-flex flex-row justify-content-center align-items-center mb-3 gap-3" role="button" href="https://play.google.com/store/apps/details?id=com.sana.eulstudent" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" width="1em" height="1em" fill="currentColor">
                             <!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) Copyright 2023 Fonticons, Inc. -->
                             <path d="M325.3 234.3L104.6 13l280.8 161.2-60.1 60.1zM47 0C34 6.8 25.3 19.2 25.3 35.3v441.3c0 16.1 8.7 28.5 21.7 35.3l256.6-256L47 0zm425.2 225.6l-58.9-34.1-65.7 64.5 65.7 64.5 60.1-34.1c18-14.3 18-46.5-1.2-60.8zM104.6 499l280.8-161.2-60.1-60.1L104.6 499z"></path>
-                        </svg>&nbsp;Go to Play Store</a><a class="btn btn-outline-dark link-light mb-4" role="button" href="https://files.catbox.moe/ok0umz.apk">Download .apk</a>
+                        </svg>&nbsp;Go to Play Store</a><a class="btn btn-outline-dark link-light d-flex flex-column justify-content-center align-items-center mb-4" role="button" href="https://files.catbox.moe/h67yln.apk">Download .apk<span class="text-muted small">v5.0.5</span></a>
                     <p class="text-muted small">*The APK is provided for users that have older androids and is not guaranteed to work as intended and may crash. Use at your own risk.</p>
                 </div>
             </div>
